--- a/src/app.css
+++ b/src/app.css
@@ -4,12 +4,12 @@
 
 @font-face {
   font-family: MMedium;
-  src: url("/assets/fonts/Medium.woff2");
+  src: url("../assets/fonts/Medium.woff2");
 }
 
 @font-face {
   font-family: MRegular;
-  src: url("/assets/fonts/Regular.woff2");
+  src: url("../assets/fonts/Regular.woff2");
 }
 
 html * {
